--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Book Store</h1>
     <p>Books Coming soon!</p>
     <p>Here are the new feature</p>
+    <p>New Updates are here.</p>
   </body>
 </html>
